fix alignment cv

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -40,6 +40,11 @@ footer{
     font-weight: 800;
   }
 }
+#cv{
+  h2, h3{
+    font-size: 22px;
+  }
+}
 
 // jumbotron height and background
 .jumbotron{
